--- a/apps/public/index.html
+++ b/apps/public/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <img class="logo" src="./images/idn-logo.png" alt="idn-logo">
-     <h1>Belajar Devops</h1>
+     <center><h1>Belajar Devops</h1></center>
+     <center><h2>Nama saya KIKI</h2></center>
 </body>
 </html>
